force-app/main/default/objects/Order/fields/AD_DISC__c.field-meta.xml
<CustomField>
    <fullName>AD_DISC__c</fullName>
    <label>AD DISC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>