force-app/main/default/objects/Order/fields/Address_Srv__c.field-meta.xml
<CustomField>
    <fullName>Address_Srv__c</fullName>
    <label>Address (Srv)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>