force-app/main/default/objects/Order/fields/Branch_Plant_Code__c.field-meta.xml
<CustomField>
    <fullName>Branch_Plant_Code__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Shop Name</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>Dealer_Master</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Orders</relationshipLabel>
    <relationshipName>Orders</relationshipName>
    <type>Lookup</type>
</CustomField>