force-app/main/default/objects/Order/fields/Chassis_Implement_Serial_Number__c.field-meta.xml
<CustomField>
    <fullName>Chassis_Implement_Serial_Number__c</fullName>
    <label>Chassis / Implement Serial Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>