force-app/main/default/objects/Order/fields/Consent__c.field-meta.xml
<CustomField>
    <fullName>Consent__c</fullName>
    <label>Consent</label>
    <length>255</length>
    <type>Text</type>
</CustomField>