force-app/main/default/objects/Order/fields/CPOINT__c.field-meta.xml
<CustomField>
    <fullName>CPOINT__c</fullName>
    <label>CPOINT</label>
    <length>255</length>
    <type>Text</type>
</CustomField>