force-app/main/default/objects/Order/fields/Customer_number__c.field-meta.xml
<CustomField>
    <fullName>Customer_number__c</fullName>
    <label>Customer number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>