force-app/main/default/objects/Order/fields/District_Srv__c.field-meta.xml
<CustomField>
    <fullName>District_Srv__c</fullName>
    <label>District (Srv)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>