force-app/main/default/objects/Order/fields/DOWN_PAY__c.field-meta.xml
<CustomField>
    <fullName>DOWN_PAY__c</fullName>
    <label>DOWN PAY</label>
    <length>255</length>
    <type>Text</type>
</CustomField>