force-app/main/default/objects/Order/fields/Engine_Code__c.field-meta.xml
<CustomField>
    <fullName>Engine_Code__c</fullName>
    <label>Engine Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>