force-app/main/default/objects/Order/fields/Floor_Srv__c.field-meta.xml
<CustomField>
    <fullName>Floor_Srv__c</fullName>
    <label>Floor (Srv)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>