force-app/main/default/objects/Order/fields/ID_Number__c.field-meta.xml
<CustomField>
    <fullName>ID_Number__c</fullName>
    <externalId>true</externalId>
    <label>ID Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>