force-app/main/default/objects/Order/fields/Is_second_hand__c.field-meta.xml
<CustomField>
    <fullName>Is_second_hand__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is second hand</label>
    <type>Checkbox</type>
</CustomField>