force-app/main/default/objects/Order/fields/KIS_Number__c.field-meta.xml
<CustomField>
    <fullName>KIS_Number__c</fullName>
    <label>KIS Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>