force-app/main/default/objects/Order/fields/Kubota_Id__c.field-meta.xml
<CustomField>
    <fullName>Kubota_Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Orders (Account)</relationshipLabel>
    <relationshipName>Orders1</relationshipName>
    <type>Lookup</type>
</CustomField>