force-app/main/default/objects/Order/fields/LANDTX__c.field-meta.xml
<CustomField>
    <fullName>LANDTX__c</fullName>
    <label>Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>