force-app/main/default/objects/Order/fields/Moo_Srv__c.field-meta.xml
<CustomField>
    <fullName>Moo_Srv__c</fullName>
    <label>Moo (Srv)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>