force-app/main/default/objects/Order/fields/NET_VALUE__c.field-meta.xml
<CustomField>
    <fullName>NET_VALUE__c</fullName>
    <label>NET VALUE</label>
    <length>255</length>
    <type>Text</type>
</CustomField>