force-app/main/default/objects/Order/fields/Original_Shop_Name_Id__c.field-meta.xml
<CustomField>
    <fullName>Original_Shop_Name_Id__c</fullName>
    <label>Original Shop Name Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>