force-app/main/default/objects/Order/fields/Payment_method_code__c.field-meta.xml
<CustomField>
    <fullName>Payment_method_code__c</fullName>
    <label>Payment method - code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>