force-app/main/default/objects/Order/fields/SF_Auto_No__c.field-meta.xml
<CustomField>
    <fullName>SF_Auto_No__c</fullName>
    <label>SF Auto No.</label>
    <length>255</length>
    <type>Text</type>
</CustomField>