force-app/main/default/objects/Order/fields/Soi_Srv__c.field-meta.xml
<CustomField>
    <fullName>Soi_Srv__c</fullName>
    <label>Soi (Srv)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>