force-app/main/default/objects/Order/fields/Tel_ID__c.field-meta.xml
<CustomField>
    <fullName>Tel_ID__c</fullName>
    <label>Tel. (ID)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>