force-app/main/default/objects/Order/fields/Tel_Srv__c.field-meta.xml
<CustomField>
    <fullName>Tel_Srv__c</fullName>
    <label>Tel. (Srv)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>