force-app/main/default/objects/Order/fields/TOTAL_PRICE__c.field-meta.xml
<CustomField>
    <fullName>TOTAL_PRICE__c</fullName>
    <label>TOTAL PRICE</label>
    <length>255</length>
    <type>Text</type>
</CustomField>