force-app/main/default/objects/Order/fields/Village_ID__c.field-meta.xml
<CustomField>
    <fullName>Village_ID__c</fullName>
    <label>Village (ID)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>