force-app/main/default/objects/Order/fields/Village_Srv__c.field-meta.xml
<CustomField>
    <fullName>Village_Srv__c</fullName>
    <label>Village (Srv)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>