force-app/main/default/objects/Order/fields/VTWEG__c.field-meta.xml
<CustomField>
    <fullName>VTWEG__c</fullName>
    <label>Dist Channel</label>
    <length>255</length>
    <type>Text</type>
</CustomField>