force-app/main/default/objects/Order/recordTypes/Daily_Sales.recordType-meta.xml
<RecordType>
    <fullName>Daily_Sales</fullName>
    <active>true</active>
    <label>Daily Sales</label>
</RecordType>