force-app/main/default/objects/Order/recordTypes/Daily_Sales_Part.recordType-meta.xml
<RecordType>
    <fullName>Daily_Sales_Part</fullName>
    <active>true</active>
    <label>Daily Sales (Part)</label>
</RecordType>