force-app/main/default/objects/Order/recordTypes/Daily_Sales_Service.recordType-meta.xml
<RecordType>
    <fullName>Daily_Sales_Service</fullName>
    <active>true</active>
    <label>Daily Sales (Service)</label>
</RecordType>