force-app/main/default/objects/Order/listViews/Daily_Sales_All_with_KIS.listView-meta.xml
<ListView>
    <fullName>Daily_Sales_All_with_KIS</fullName>
    <columns>ORDERS.ORDER_NUMBER</columns>
    <columns>SF_Auto_No__c</columns>
    <columns>DBM_Order__c</columns>
    <columns>KIS_Number__c</columns>
    <columns>KIS_Username__c</columns>
    <columns>KIS_Password__c</columns>
    <columns>Product_Type__c</columns>
    <columns>Chassis_Implement_Serial_Number__c</columns>
    <columns>Engine_Code__c</columns>
    <columns>SALES.ACCOUNT.NAME</columns>
    <columns>Product__c</columns>
    <columns>ORDERS.CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ORDER.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Order.Daily_Sales</value>
    </filters>
    <filters>
        <field>Product__c</field>
        <operation>contains</operation>
        <value>KIS</value>
    </filters>
    <filters>
        <field>DBM_Order__c</field>
        <operation>notEqual</operation>
    </filters>
    <filters>
        <field>ORDERS.CREATED_DATE</field>
        <operation>equals</operation>
        <value>THIS_YEAR</value>
    </filters>
    <label>Daily Sales: All with KIS</label>
</ListView>