force-app/main/default/objects/Order/listViews/Daily_Sales_Duplicated_KADS.listView-meta.xml
<ListView>
    <fullName>Daily_Sales_Duplicated_KADS</fullName>
    <columns>ORDERS.ORDER_NUMBER</columns>
    <columns>SF_Auto_No__c</columns>
    <columns>DBM_Order__c</columns>
    <columns>Product__c</columns>
    <columns>Product_Type__c</columns>
    <columns>Chassis_Implement_Serial_Number__c</columns>
    <columns>Engine_Code__c</columns>
    <columns>Branch_Plant_Code__c</columns>
    <columns>Is_Duplicate__c</columns>
    <columns>Sale_Date__c</columns>
    <columns>ORDERS.CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Is_Duplicate__c</field>
        <operation>equals</operation>
        <value>Yes</value>
    </filters>
    <filters>
        <field>ORDER.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Order.Daily_Sales</value>
    </filters>
    <label>Daily Sales: Duplicated KADS</label>
    <sharedTo>
        <roleAndSubordinatesInternal>Overseas</roleAndSubordinatesInternal>
    </sharedTo>
</ListView>