force-app/main/default/objects/Order/listViews/Daily_Sales_KADS_OVS.listView-meta.xml
<ListView>
    <fullName>Daily_Sales_KADS_OVS</fullName>
    <columns>ORDERS.ORDER_NUMBER</columns>
    <columns>SF_Auto_No__c</columns>
    <columns>DBM_Order__c</columns>
    <columns>SALES.ACCOUNT.NAME</columns>
    <columns>Product__c</columns>
    <columns>Product_Type__c</columns>
    <columns>Chassis_Implement_Serial_Number__c</columns>
    <columns>Engine_Code__c</columns>
    <columns>Branch_Plant_Code__c</columns>
    <columns>Is_Duplicate__c</columns>
    <columns>Sale_Date__c</columns>
    <columns>ORDERS.CREATED_DATE</columns>
    <columns>ID_Number__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ORDERS.CREATED_DATE</field>
        <operation>greaterOrEqual</operation>
        <value>LAST_N_DAYS:1</value>
    </filters>
    <filters>
        <field>LANDTX__c</field>
        <operation>notEqual</operation>
        <value>TH</value>
    </filters>
    <filters>
        <field>ORDER.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Order.Daily_Sales</value>
    </filters>
    <label>Daily Sales: KADS OVS</label>
</ListView>