force-app/main/default/objects/Order/listViews/Daily_Sales_Kads_welcome_call.listView-meta.xml
<ListView>
    <fullName>Daily_Sales_Kads_welcome_call</fullName>
    <columns>ORDERS.ORDER_NUMBER</columns>
    <columns>SF_Auto_No__c</columns>
    <columns>Product_Type__c</columns>
    <columns>Chassis_Implement_Serial_Number__c</columns>
    <columns>Engine_Code__c</columns>
    <columns>SALES.ACCOUNT.NAME</columns>
    <columns>Product__c</columns>
    <columns>Branch_Plant_Code__c</columns>
    <columns>Payment_Method__c</columns>
    <columns>Sale_Date__c</columns>
    <columns>Number_of_Welcome_Call_record__c</columns>
    <columns>Is_Duplicate__c</columns>
    <columns>ORDERS.CREATED_DATE</columns>
    <columns>ORDERS.LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LANDTX__c</field>
        <operation>equals</operation>
        <value>TH</value>
    </filters>
    <filters>
        <field>Product_Type__c</field>
        <operation>notEqual</operation>
        <value>IMPLEMENT,DIESEL ENGINE,ELSE,KIS</value>
    </filters>
    <filters>
        <field>Number_of_Welcome_Call_record__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>ORDER.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Order.Daily_Sales</value>
    </filters>
    <label>Daily Sales: Kads ที่ไม่มี welcome call</label>
</ListView>