force-app/main/default/objects/Order/listViews/Daily_Sales_KADS_with_first_Welcomecall.listView-meta.xml
<ListView>
    <fullName>Daily_Sales_KADS_with_first_Welcomecall</fullName>
    <columns>ORDERS.ORDER_NUMBER</columns>
    <columns>SF_Auto_No__c</columns>
    <columns>SALES.ACCOUNT.NAME</columns>
    <columns>Chassis_Implement_Serial_Number__c</columns>
    <columns>ORDERS.CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Number_of_Welcome_Call_record__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>LANDTX__c</field>
        <operation>equals</operation>
        <value>TH</value>
    </filters>
    <filters>
        <field>ORDER.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Order.Daily_Sales</value>
    </filters>
    <label>Daily Sales: KADS with first Welcomecall</label>
</ListView>