force-app/main/default/objects/Order/listViews/Daily_Sales_Part_All_Thailand.listView-meta.xml
<ListView>
    <fullName>Daily_Sales_Part_All_Thailand</fullName>
    <columns>ORDERS.ORDER_NUMBER</columns>
    <columns>SF_Auto_No__c</columns>
    <columns>SALES.ACCOUNT.NAME</columns>
    <columns>First_Name__c</columns>
    <columns>Last_Name__c</columns>
    <columns>DBMVBELN__c</columns>
    <columns>Branch_Plant_Code__c</columns>
    <columns>ORDERS.CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ORDER.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Order.Daily_Sales_Part</value>
    </filters>
    <filters>
        <field>LANDTX__c</field>
        <operation>equals</operation>
        <value>TH</value>
    </filters>
    <label>Daily Sales (Part): All Thailand</label>
</ListView>